--- a/bj_CubicGame/bj_CubicGame.vcxproj
+++ b/bj_CubicGame/bj_CubicGame.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="1_주사위게임.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
